worked on responsiveness of the main page, fixed error with the hamburger, had to hide overflow in the global level

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@ body {
   font-size: calc(10px + 2vmin);
   color: white;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .App-link {
