--- a/src/components/Burger.css
+++ b/src/components/Burger.css
@@ -1,6 +1,6 @@
 .hamburger-button {
   position: absolute;
-  top: 30%;
+  top: 35%;
   right: 2rem;
   display: flex;
   flex-direction: column;
