--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -1,7 +1,7 @@
 .intro-main-container {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  min-height: 100vh;
   justify-content: center;
   align-items: center;
 }
@@ -9,21 +9,27 @@
 .intro-container {
   color: black;
   background-color: #eae7dc;
-  height: 50vh;
+  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: -60px;
 }
 
 .intro-container2 {
   color: black;
   background-color: #eae7dc;
-  height: 50vh;
-  width: 100%;
-  padding-top: -20px;
+  height: 100vh;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.intro-img {
+  align-self: center;
+  padding-bottom: 40px;
 }
 
 .intro-header {
@@ -51,7 +57,7 @@
   padding-bottom: 1.2em;
 }
 
-/* For content responsive sizing */
+/* For responsive sizing */
 /* Mobile */
 .intro-container {
   padding: 0 20px;
@@ -59,14 +65,33 @@
 
 /* Tablet */
 @media (min-width: 600px) {
+  .intro-main-container {
+    flex-direction: column;
+  }
+
   .intro-container {
-    padding: 0 5em;
+    padding-right: 20px;
+    height: 50vh;
+  }
+
+  .intro-container2 {
+    height: 50vh;
+    width: 100%;
   }
 }
 
 /* Desktop */
 @media (min-width: 900px) {
+  .intro-main-container {
+    flex-direction: row;
+  }
+
   .intro-container {
     padding: 0 5em;
+    height: 100vh;
+  }
+
+  .intro-container2 {
+    height: 100vh;
   }
 }
