--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -6,13 +6,14 @@
   background-color: white;
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: 1;
   font-size: 0.8em;
 }
 
 .name {
   color: #ee4e34;
   font-weight: 500;
+  font-size: 2.2rem;
 }
 
 .link {
